--- a/parts/res/xml/preferences_kcal.xml
+++ b/parts/res/xml/preferences_kcal.xml
@@ -11,12 +11,12 @@
      limitations under the License.
 -->
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
-    <com.asus.zenparts.preferences.SecureSettingSwitchPreference
+    <com.samsung.msm8917.preferences.SecureSettingSwitchPreference
         android:defaultValue="false"
         android:key="kcal_enabled"
         android:title="@string/kcal_disabled" />
 
-    <com.asus.zenparts.preferences.SecureSettingSwitchPreference
+    <com.samsung.msm8917.preferences.SecureSettingSwitchPreference
         android:defaultValue="false"
         android:dependency="kcal_enabled"
         android:key="set_on_boot"
@@ -26,28 +26,28 @@
         android:key="cat_colormanagement"
         android:title="@string/cat_colormanagement">
 
-        <com.asus.zenparts.preferences.CustomSeekBarPreference
-            android:defaultValue="255"
+        <com.samsung.msm8917.preferences.CustomSeekBarPreference
+            android:defaultValue="256"
             android:dependency="kcal_enabled"
             android:key="color_red"
             android:max="256"
             android:title="@string/color_red" />
 
-        <com.asus.zenparts.preferences.CustomSeekBarPreference
-            android:defaultValue="255"
+        <com.samsung.msm8917.preferences.CustomSeekBarPreference
+            android:defaultValue="256"
             android:dependency="kcal_enabled"
             android:key="color_green"
             android:max="256"
             android:title="@string/color_green" />
 
-        <com.asus.zenparts.preferences.CustomSeekBarPreference
-            android:defaultValue="255"
+        <com.samsung.msm8917.preferences.CustomSeekBarPreference
+            android:defaultValue="256"
             android:dependency="kcal_enabled"
             android:key="color_blue"
             android:max="256"
             android:title="@string/color_blue" />
 
-        <com.asus.zenparts.preferences.CustomSeekBarPreference
+        <com.samsung.msm8917.preferences.CustomSeekBarPreference
             android:defaultValue="35"
             android:dependency="kcal_enabled"
             android:key="color_minimum"
@@ -60,35 +60,35 @@
         android:key="cat_calibration"
         android:title="@string/cat_calibration">
 
-        <com.asus.zenparts.preferences.CustomSeekBarPreference
+        <com.samsung.msm8917.preferences.CustomSeekBarPreference
             android:defaultValue="35"
             android:dependency="kcal_enabled"
             android:key="saturation"
             android:max="158"
             android:title="@string/saturation" />
 
-        <com.asus.zenparts.preferences.CustomSeekBarPreference
+        <com.samsung.msm8917.preferences.CustomSeekBarPreference
             android:defaultValue="127"
             android:dependency="kcal_enabled"
             android:key="value"
             android:max="255"
             android:title="@string/value" />
 
-        <com.asus.zenparts.preferences.CustomSeekBarPreference
+        <com.samsung.msm8917.preferences.CustomSeekBarPreference
             android:defaultValue="127"
             android:dependency="kcal_enabled"
             android:key="contrast"
             android:max="255"
             android:title="@string/contrast" />
 
-        <com.asus.zenparts.preferences.CustomSeekBarPreference
+        <com.samsung.msm8917.preferences.CustomSeekBarPreference
             android:defaultValue="0"
             android:dependency="kcal_enabled"
             android:key="hue"
             android:max="1536"
             android:title="@string/hue" />
 
-        <com.asus.zenparts.preferences.SecureSettingSwitchPreference
+        <com.samsung.msm8917.preferences.SecureSettingSwitchPreference
             android:defaultValue="false"
             android:dependency="kcal_enabled"
             android:key="grayscale"
